# nucleoids

./: .gitignore  CMakeLists.txt  LICENSE
data/10-11/: Image0010.oif  Image0011.oif
data/10-11/Image0010.oif.files/: s_240525368-3098429.roi  s_C001Z001.pty  s_C001Z002.pty  s_C001Z003.pty  s_C001Z004.pty  s_C001Z005.pty  s_C001Z006.pty  s_C001Z007.pty  s_C001Z008.pty  s_C001Z009.pty  s_C001Z010.pty  s_C001Z011.pty  s_C001Z012.pty  s_C001Z013.pty  s_C001Z014.pty  s_C001Z015.pty  s_C001Z016.pty  s_C001Z017.pty  s_C001Z018.pty  s_C001Z019.pty  s_C001Z020.pty  s_C001Z021.pty  s_C001Z022.pty  s_C001Z023.pty  s_C001Z024.pty  s_C001Z025.pty  s_C001Z026.pty  s_C001Z027.pty  s_C001Z028.pty  s_C001Z029.pty  s_C001Z030.pty  s_C001Z031.pty
data/10-11/Image0011.oif.files/: s_240519664-3497043.roi  s_C001.pty  s_C002.pty  s_LUT2.lut
data/14-15/: Image0014.oif  Image0015.oif
data/14-15/Image0014.oif.files/: s_242162512-9434987.roi  s_C001Z001.pty  s_C001Z002.pty  s_C001Z003.pty  s_C001Z004.pty  s_C001Z005.pty  s_C001Z006.pty  s_C001Z007.pty  s_C001Z008.pty  s_C001Z009.pty  s_C001Z010.pty  s_C001Z011.pty  s_C001Z012.pty  s_C001Z013.pty  s_C001Z014.pty  s_C001Z015.pty  s_C001Z016.pty  s_C001Z017.pty  s_C001Z018.pty  (+12 more)
data/17-18 (old)/: Image0017.oif  Image0018.oif
data/31-32/: 31_cut.tiff  Image0031.oif  Image0032.oif
data/5-6/: 005-Z_cut.tif  Image0005.oif  Image0006.oif
data/9-10/: Image0009.oif  Image0010.oif
data/samples/: 10.tiff  14.tiff  31.tiff  9.tiff
src/: main.cpp
src/common/: utils.cpp  utils.h
src/core/: draw.cpp  draw.h  operations.cpp  operations.h
(+147 files in other folders)
